# compile-time_computation

./: CMakeLists.txt  IDENTIFICATION.txt  README.md
app/: test_biquad_filter.cpp  test_cexpr_basic_string.cpp  test_cexpr_math.cpp  test_mandelbrot.cpp
include/ra/: biquad_filter.hpp  cexpr_basic_string.hpp  cexpr_math.hpp  mandelbrot.hpp
